[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "pleaserender"
version = "0.1.0"
description = "The polite exoplanet rendering library"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy"
]

[project.urls]
Home = "https://github.com/CoreySpohn/pleaserender"
Source = "https://github.com/CoreySpohn/pleaserender"
Tracker = "https://github.com/CoreySpohn/pleaserender/issues"
