[build-system]
requires = ['hatchling', "hatch-fancy-pypi-readme", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pleaserender"
description = "The polite exoplanet rendering library"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Astronomy",
]
authors = [{ name = "Corey Spohn", email = "corey.a.spohn@nasa.gov" }]
dependencies = ["numpy", "xarray", "astropy", "matplotlib"]
dynamic = ['readme', 'version']


[project.urls]
Homepage = "https://github.com/CoreySpohn/pleaserender"
Issues = "https://github.com/CoreySpohn/pleaserender/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
